Variable fonts, FontAxisInfo, FontVariation